changed linkedin and github to website

--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "https://github.com/ChinmayLohani"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://uk.linkedin.com/in/chinmay-lohani-4a5a7074"
+  linkedin         : "https://www.linkedin.com/in/chinmay-lohani-4a5a7074/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
